Migrate to java 1.8, fix bugs